--- a/theme.less
+++ b/theme.less
@@ -27,10 +27,12 @@
     }
 }
 
-.cm-atom, .cm-string, .cm-string-2, .cm-hr {color: #d89333;}
+.cm-atom, .cm-string, .cm-string-2, .cm-hr {color: #FF8500;}
 .cm-number, .cm-attribute, .cm-plus {color: #85a300;}
-.cm-def, .cm-property {color: #b77fdb;}
-.cm-variable, .cm-variable-2, .cm-variable-3, .cm-operator, .cm-meta, .cm-bracket {color: @foreground;}
+.cm-def, .cm-property {color: #FF8500;}
+.cm-variable{color: #00FF00}
+.cm-variable-2, .cm-variable-3{color: #73D6FF}
+.cm-operator, .cm-meta, .cm-bracket {color: @foreground;}
 .cm-comment {color: #767676;}
 .cm-error, .cm-minus {color: #dc322f;}
 .cm-header {color: #d85896;}
